--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "illuminate/support": "5.5.* || 5.6.* || 5.7.* || 5.8.*"
+        "illuminate/support": "5.5.* || 5.6.* || 5.7.* || 5.8.* || ^6.0"
     },
     "require-dev": {
         "orchestra/testbench": "3.8.*",
